components/radix-monitoring/gateway-lb/gateway-resource.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-load-balancer-resource-group: clusters-${zone}
      service.beta.kubernetes.io/azure-pip-name: ${pipGatewayIp}
    parametersRef:
      group: ""
      kind: ConfigMap
      name: istio-gateway-config
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: grafana-tls
          - group: ""
            kind: Secret
            name: uptime-cert
        mode: Terminate
    - name: uptime
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: uptime-cert
        mode: Terminate
